# tv-anti-binge

./: .gitignore  PRIVACY.md  README.md  pyproject.toml
.claude/: launch.json
extension/: PUBLISHING.md  README.md  background.js  content.js  dev-test.html  dnr_rules.json  embed-engine.js  gen_icons.py  manifest.json  package-lock.json  package.json  sw.js
extension/lib/: align.js  detect.js  embed.js  guard.js  heuristics.js  planner.js  scenes.js  subfetch.js  subtitles.js  tvmaze.js  wiki.js
extension/options/: options.css  options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
extension/scripts/: calibrate-margins.mjs  package.sh  vendorize.mjs
extension/tests/: align.test.mjs  background.test.mjs  detect.test.mjs  embed-live.test.mjs  embed.test.mjs  fixtures.mjs  guard.test.mjs  heuristics.test.mjs  planner.test.mjs  scenes.test.mjs  subfetch.test.mjs  subtitles.test.mjs  tvmaze.test.mjs  wiki.test.mjs
src/bingebreak/: __init__.py  cache.py  classify.py  cli.py  heuristics.py  planner.py  render.py  tvmaze.py
tests/: test_cache.py  test_heuristics.py  test_planner.py  test_tvmaze.py
