[project]
name = "bingebreak"
version = "0.1.0"
description = "Find natural stopping points in TV shows so you don't end the night on a cliffhanger."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "anthropic>=0.92.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
bingebreak = "bingebreak.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bingebreak"]
